<resources>
    <string name="app_name">Peepeep</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="proceed_pay">Proceed To Pay</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="base_url">http://13.127.133.133/api</string>
    <string name="login_url">api/mobileregistration/UserLogin</string>
    <string name="regist_url">api/mobileregistration/mobileregistration</string>
    <string name="forget_password">api/mobileregistration/forgetpassword</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="business_name">Business Name</string>
    <string name="thanks">Thank you!</string>
    <string name="choosingus">f&#160;o&#160;r&#160;&#160; c&#160;h&#160;o&#160;o&#160;s&#160;i&#160;n&#160;g&#160;&#160; u&#160;s&#160;</string>
    <string name="gst">GST Number</string>
    <string name="forbussiness">For Business</string>
    <string name="facebook_app_id">275774476694873</string>
    <string name="fb_login_protocol_scheme">fb275774476694873</string>
    <string name="register">Register</string>
    <string name="send">Send</string>
    <string name="forgetpassword">Forgot Password ?</string>
    <!--splash related strings-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Look For Transport </string>
    <string name="digi_5">We have sent 5 digit code to your registered mobile no./ Email ID to reset the password .</string>

    <string name="slide_2_title">Home to Home </string>
    <string name="slide_2_desc">Transport Home To Home </string>

    <string name="slide_3_title">City to City</string>
    <string name="slide_3_desc">Transport Home To Home </string>

    <string name="slide_4_title">Post/Call Your Requirement </string>
    <string name="slide_4_desc">You can easily post/Call your nearest for Transport </string>
    <string name="acceptterms">I Accept </string>
    <string name="insurenc">Insurance</string>
    <string name="terms">  <font fgcolor='#f15757'>Terms &amp; Conditions</font></string>
    <string name="pick">Pick Up</string>
    <string name="drop">Drop</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="any">Any</string>
    <string name="labour">Labour</string>
    <string name="book">Book Vehicle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This Feature will avilable in next Version</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_landingpage">Landingpage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_booking">BookingActivity</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
</resources>
