<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:layout_editor_absoluteY="25dp">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_440"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dim_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.00">

            <com.peepeep.transport.uicomponents.PpEditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittextboxheight"
                android:layout_marginLeft="@dimen/dim_5"
                android:background="@drawable/selet_edittext"
                android:drawableStart="@drawable/ic_profile_round"
                android:drawablePadding="@dimen/dim_15"
                android:fontFamily="@font/califi"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/dim_10"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/regularfont" />

            <com.peepeep.transport.uicomponents.PpEditText
                android:id="@+id/pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittextboxheight"
                android:layout_marginLeft="@dimen/dim_5"
                android:layout_marginTop="@dimen/dim_10"
                android:background="@drawable/selet_edittext"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/dim_15"
                android:fontFamily="@font/califi"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dim_10"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/regularfont" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="@font/califi"
                android:padding="@dimen/tab_title_size_one"
                android:text="@string/forgetpassword"
                android:textColor="@color/red_color"
                android:textSize="@dimen/screen_title" />

            <com.peepeep.transport.uicomponents.PpButton
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/topgradient"
                android:fontFamily="@font/califi"
                android:text="@string/action_sign_in_short"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/screen_title"
                android:textStyle="bold" />


        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fblogin"
            android:layout_width="@dimen/dim_100"
            android:layout_height="@dimen/dim_45"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_edittext"
            android:text="@string/facebook"
            android:textColor="@color/facebook_color"
            android:visibility="visible"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.70" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gmaillogin"
            android:layout_width="@dimen/dim_100"
            android:layout_height="@dimen/dim_45"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_edittext"
            android:onClick="gmaillogin"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/gmail_red"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.70" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--<FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp" />
            </FrameLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>